--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,29 @@
 <html>
 <head>
   <title>BookReviewInSpace</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+  <ul>
+    <% if !user_signed_in? %>
+      <li><%= link_to "Sign Up", new_user_registration_path %></li>
+      <li><%= link_to "Sign In", new_user_session_path %></li>
+    <% else %>
+      <li><%= link_to "Sign Out", destroy_user_session_path %></li>
+    <% end %>
+  <ul>
+
+  <div class="notice devise"><%= notice %></div>
+
+  <% flash.each do |type, message| %>
+  <div class="flash flash-<%= type %>">
+    <%= message %>
+  </div>
+  <% end %>
+
 
 <%= yield %>
 
