--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
       <li><%= link_to "Sign Up", new_user_registration_path %></li>
       <li><%= link_to "Sign In", new_user_session_path %></li>
     <% else %>
-      <li><%= link_to "Sign Out", destroy_user_session_path %></li>
+      <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
       <li><%= link_to "Edit Account", edit_user_registration_path %></li>
     <% end %>
   <ul>
