--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     <% else %>
       <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
       <li><%= link_to "Edit Account", edit_user_registration_path %></li>
+      <li><%= link_to "Post a Book", new_book_path %></li>
     <% end %>
   <ul>
 
