Wrote test for title that is too short.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
   <ul>
 
   <div class="notice devise"><%= notice %></div>
+  <div class="alert devise"><%= alert %></div>
 
   <% flash.each do |type, message| %>
   <div class="flash flash-<%= type %>">
