--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,4 +1,16 @@
+
+<h3>Fill out the forms below to add book to your collection.</h3>
+
 <%= form_for @book do |f| %>
+
+  <% if @book.errors.any? %>
+  <h2>Error!</h2>
+  <ul>
+    <% @book.errors.full_messages.each do |error_msg| %>
+    <li><%= error_msg %></li>
+    <% end %>
+  </ul>
+  <% end %>
 
   <div class="field">
     <%= f.label :title %>
