Writing a test to view all books on homepage. Currently can view all books posted by users.

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,9 @@
+<h1>All of the books</h1>
+
 <% @books.each do |b| %>
 <div class="title"><%= b.title %></div>
+<p>By: <%= b.author %></p>
+<p><%= b.description %></p>
+<p><%= link_to b.url %></p>
 <hr/>
 <% end %>
