Added functionality to delete a review

--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -10,3 +10,5 @@
 <%= f.submit "Update Review", method: :post %>
 
 <% end %>
+
+<%= button_to "Delete this review", book_review_path(@book, @review), method: :delete %>
