Wrote test for editing a review.

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -30,3 +30,5 @@
 <% end %>
 
 <p><%= link_to "Back to homepage", root_path %></p>
+<div>&nbsp;</div>
+<p><%= button_to "Delete this book", book_path(@book), method: :delete %></p>
